# anny

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: generate_regression_fixtures.py  precompute_soma_rig.py
src/anny/: __init__.py  keypoints.py  parameters_regressor.py  paths.py  shape_distribution.py
src/anny/data/keypoints/: coco.pth
src/anny/examples/: coco_keypoints.py  fit_to_mesh.py  interactive_demo.py  smpl_comparison.py  smplx_comparison.py  soma_comparison.py
src/anny/models/: __init__.py  full_model.py  model_data.py  model_transforms.py  phenotype.py  retopology.py  rigged_model.py  smpl.py  soma.py
src/anny/skinning/: skinning.py  warp_skinning.py
src/anny/utils/: kinematics.py  mesh_utils.py  obj_utils.py  warp_mesh_utils.py
test/: test_degenerate_configuration.py  test_instantiation.py  test_local_changes.py  test_param_regressor.py  test_pickle.py  test_pose_parameterization.py  test_regression_vs_fixtures.py  test_skinning_weights.py  test_soma.py  test_various.py
tutorials/: shape_parameterization.ipynb  texture.ipynb
